# tpu-axe

./: .gitignore  .global_gitignore  README.md  pyproject.toml  setup_vm_from_scratch.py  tpu_manager.py
