[project]
name = "tpu-manager"
version = "0.1.0"
description = "TPU manager"
requires-python = ">=3.7"
dependencies = [
    "typer>=0.9.0",
    "pydantic",
]

[project.scripts]
tpu-manager = "tpu_manager.py:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tpu_manager"]
